# snipr

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  snipr.example..toml
snipr/: cli.py  core.py  db.py  scheduler.py  settings.py
snipr/fetchers/: asi3.py
snipr/web/: api.py  app.py  logging_stream.py  scheduler_bridge.py  ui.py
snipr/webui/: main.py
