[build-system]
requires = ["hatchling>=1.20"]     # lightweight PEP 517 backend
build-backend = "hatchling.build"

[project]
name = "snipr"
version = "0.1.0"
description = "Pluggable auction bid tracker (and eventual sniper) for multiple auction platforms."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

authors = [
  { name = "Ethan Steffens", email = "me@ethansteffens.com" }
]

# ---------- core runtime ----------
dependencies = [
  "httpx>=0.27,<1.0",            # async HTTP client
  "beautifulsoup4>=4.12,<5.0",   # HTML parsing
  "pydantic>=2.7,<3.0",          # data models
  "sqlmodel>=0.0.14,<1.0",       # ORM (SQLAlchemy + Pydantic)
  "apscheduler>=3.10,<4.0",      # polling scheduler
  "typer>=0.12,<1.0",            # for cli
]

# ---------- optional / dev ----------
[project.optional-dependencies]
browser = [                      # only needed if you scrape JS-heavy sites
  "playwright>=1.44,<2.0"
]
dev = [
  "black>=24.3,<25",             # formatting
  "ruff>=0.4,<1",                # linting / import-sort
  "anyio>=4.4,<5",               # async test helpers
  "rich>=13.7,<14",              # for colored help
  "debugpy>=1.8.15,<2",
  "pytest>=8.4.1,<9",
  "pytest-asyncio>=1.1.0,<2",
]

# ---------- CLI entry point ----------
[project.scripts]
snipr = "snipr.cli:app"   # `uv pip install -e .` gives you `snipr` cmd


